--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -48,3 +48,15 @@ div.content {
     height: 160px;
     width: 160px;
 }
+.text-overlay { 
+    position: absolute;
+    top: 97px;
+    right: 15px;
+    width: 251px;
+    height: 50px;
+    border: 3px solid #73AD21;
+    background-color: lightskyblue;
+    text-align: center;
+    padding-top: 7px;
+
+}
