--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -31,6 +31,10 @@ img.boston-pic {
     background-color: gray;
 }
 
+.copyRight { 
+    margin-bottom: 0px;
+}
+
 div.background {
     background-image: url(../imgs/Ocean.jpg);
 }
@@ -49,14 +53,22 @@ div.content {
     width: 160px;
 }
 .text-overlay { 
-    position: absolute;
-    top: 97px;
-    right: 15px;
-    width: 251px;
+    position: relative;
+    top: 75%;
+    right: 0px;
+    width: 100%;
     height: 50px;
     border: 3px solid #73AD21;
     background-color: lightskyblue;
     text-align: center;
     padding-top: 7px;
+   
 
+}
+.marvel-pic {
+    height: 200px;
+    width: 100%;
+    padding-bottom: 15px;
+   
+   
 }
